# frogxt

./: .gitignore  Cargo.toml  README.md  com.tenderowl.frog.yaml  meson.build  meson_options.txt
build-aux/: leptonica.yaml  tesseract.yaml
data/: com.tenderowl.frog.desktop.in  com.tenderowl.frog.gschema.xml  com.tenderowl.frog.metainfo.xml.in  com.tenderowl.frog.service.in  frog.gresource.xml  frogxt.gresource.xml  general.css  meson.build
data/icons/: meson.build
data/tessdata/: meson.build
data/ui/: extracted-page.blp  language-popover.blp  language-row.blp  preferences-dialog.blp  preferences-general.blp  preferences-languages.blp  shortcuts-dialog.blp  welcome-page.blp  window.blp  window.ui
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  config.rs.in  extracted_page.rs  language_item.rs  language_manager.rs  language_popover.rs  language_popover_row.rs  language_row.rs  main.rs  meson.build  portal.rs  preferences_dialog.rs  telemetry.rs  tray.rs  welcome_page.rs  window.rs
src/backends/: kalosm.rs  mod.rs  tesseract.rs
src/preferences_dialog/: general_page.rs  languages_page.rs
src/services/: export.rs  history.rs  mod.rs  ocr.rs  preprocess.rs  screenshot.rs  tts.rs
subprojects/: blueprint-compiler.wrap
