[package]
name = "frog"
version = "2.0.0"
edition = "2021"

[dependencies]
ashpd = { version = "0.13.10", features = ["screenshot", "gtk4", "tracing", "tokio"], default-features = false }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.11", package = "gtk4", features = ["gnome_50"] }
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_9"]
