[package]
name = "frog"
version = "2.0.0"
edition = "2021"

[dependencies]
ashpd = { version = "=0.13.11", features = ["screenshot", "gtk4", "tracing", "tokio"], default-features = false }
ksni = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.11", package = "gtk4", features = ["gnome_50"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
# tesseract-rs = { version = "0.3", default-features = false }
printpdf = "0.9"
imageproc = "0.26"
thiserror = "2.0"
once_cell = "1.21"
regex = "1.12"
leptess = "0.14.0"
rqrr = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_9"]
